; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_hwcontext_opencl.c_opencl_frames_get_constraints.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_hwcontext_opencl.c_opencl_frames_get_constraints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { %struct.TYPE_12__* }
%struct.TYPE_12__ = type { i32, i32 }
%struct.TYPE_13__ = type { i64, i64, i32*, i8** }
%struct.TYPE_11__ = type { i64, i64 }

@CL_DEVICE_IMAGE2D_MAX_WIDTH = common dso_local global i32 0, align 4
@CL_SUCCESS = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [52 x i8] c"Failed to query maximum supported image width: %d.\0A\00", align 1
@CL_DEVICE_IMAGE2D_MAX_HEIGHT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [53 x i8] c"Failed to query maximum supported image height: %d.\0A\00", align 1
@AV_LOG_DEBUG = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [37 x i8] c"Maximum supported image size %dx%d.\0A\00", align 1
@CL_MEM_READ_WRITE = common dso_local global i32 0, align 4
@CL_MEM_OBJECT_IMAGE2D = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [46 x i8] c"Failed to query supported image formats: %d.\0A\00", align 1
@ENOSYS = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [67 x i8] c"No image support in OpenCL driver (zero supported image formats).\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@AV_PIX_FMT_NB = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [22 x i8] c"Format %s supported.\0A\00", align 1
@AV_PIX_FMT_NONE = common dso_local global i8* null, align 8
@AV_PIX_FMT_OPENCL = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_14__*, i8*, %struct.TYPE_13__*)* @opencl_frames_get_constraints to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opencl_frames_get_constraints(%struct.TYPE_14__* %0, i8* %1, %struct.TYPE_13__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_14__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_13__*, align 8
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_11__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca %struct.TYPE_11__, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.TYPE_14__* %0, %struct.TYPE_14__** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.TYPE_13__* %2, %struct.TYPE_13__** %7, align 8
  %21 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  store %struct.TYPE_12__* %23, %struct.TYPE_12__** %8, align 8
  store %struct.TYPE_11__* null, %struct.TYPE_11__** %10, align 8
  %24 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @CL_DEVICE_IMAGE2D_MAX_WIDTH, align 4
  %28 = call i32 @clGetDeviceInfo(i32 %26, i32 %27, i32 8, i64* %15, i32* null)
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* @CL_SUCCESS, align 4
  %31 = icmp ne i32 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %3
  %33 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %34 = load i32, i32* @AV_LOG_ERROR, align 4
  %35 = load i32, i32* %11, align 4
  %36 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %33, i32 %34, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i32 %35)
  br label %41

37:                                               ; preds = %3
  %38 = load i64, i64* %15, align 8
  %39 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %39, i32 0, i32 0
  store i64 %38, i64* %40, align 8
  br label %41

41:                                               ; preds = %37, %32
  %42 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* @CL_DEVICE_IMAGE2D_MAX_HEIGHT, align 4
  %46 = call i32 @clGetDeviceInfo(i32 %44, i32 %45, i32 8, i64* %16, i32* null)
  store i32 %46, i32* %11, align 4
  %47 = load i32, i32* %11, align 4
  %48 = load i32, i32* @CL_SUCCESS, align 4
  %49 = icmp ne i32 %47, %48
  br i1 %49, label %50, label %55

50:                                               ; preds = %41
  %51 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %52 = load i32, i32* @AV_LOG_ERROR, align 4
  %53 = load i32, i32* %11, align 4
  %54 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %51, i32 %52, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i32 %53)
  br label %59

55:                                               ; preds = %41
  %56 = load i64, i64* %16, align 8
  %57 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %58 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %57, i32 0, i32 1
  store i64 %56, i64* %58, align 8
  br label %59

59:                                               ; preds = %55, %50
  %60 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %61 = load i32, i32* @AV_LOG_DEBUG, align 4
  %62 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %63 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %66 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %65, i32 0, i32 1
  %67 = load i64, i64* %66, align 8
  %68 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %60, i32 %61, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0), i64 %64, i64 %67)
  %69 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %70 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %69, i32 0, i32 0
  %71 = load i32, i32* %70, align 4
  %72 = load i32, i32* @CL_MEM_READ_WRITE, align 4
  %73 = load i32, i32* @CL_MEM_OBJECT_IMAGE2D, align 4
  %74 = call i32 @clGetSupportedImageFormats(i32 %71, i32 %72, i32 %73, i64 0, %struct.TYPE_11__* null, i64* %9)
  store i32 %74, i32* %11, align 4
  %75 = load i32, i32* %11, align 4
  %76 = load i32, i32* @CL_SUCCESS, align 4
  %77 = icmp ne i32 %75, %76
  br i1 %77, label %78, label %85

78:                                               ; preds = %59
  %79 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %80 = load i32, i32* @AV_LOG_ERROR, align 4
  %81 = load i32, i32* %11, align 4
  %82 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %79, i32 %80, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.3, i64 0, i64 0), i32 %81)
  %83 = load i32, i32* @ENOSYS, align 4
  %84 = call i32 @AVERROR(i32 %83)
  store i32 %84, i32* %13, align 4
  br label %245

85:                                               ; preds = %59
  %86 = load i64, i64* %9, align 8
  %87 = icmp eq i64 %86, 0
  br i1 %87, label %88, label %94

88:                                               ; preds = %85
  %89 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %90 = load i32, i32* @AV_LOG_ERROR, align 4
  %91 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %89, i32 %90, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.4, i64 0, i64 0))
  %92 = load i32, i32* @ENOSYS, align 4
  %93 = call i32 @AVERROR(i32 %92)
  store i32 %93, i32* %13, align 4
  br label %245

94:                                               ; preds = %85
  %95 = load i64, i64* %9, align 8
  %96 = trunc i64 %95 to i32
  %97 = call i8* @av_malloc_array(i32 %96, i32 16)
  %98 = bitcast i8* %97 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %98, %struct.TYPE_11__** %10, align 8
  %99 = load %struct.TYPE_11__*, %struct.TYPE_11__** %10, align 8
  %100 = icmp ne %struct.TYPE_11__* %99, null
  br i1 %100, label %104, label %101

101:                                              ; preds = %94
  %102 = load i32, i32* @ENOMEM, align 4
  %103 = call i32 @AVERROR(i32 %102)
  store i32 %103, i32* %13, align 4
  br label %245

104:                                              ; preds = %94
  %105 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %106 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %105, i32 0, i32 0
  %107 = load i32, i32* %106, align 4
  %108 = load i32, i32* @CL_MEM_READ_WRITE, align 4
  %109 = load i32, i32* @CL_MEM_OBJECT_IMAGE2D, align 4
  %110 = load i64, i64* %9, align 8
  %111 = load %struct.TYPE_11__*, %struct.TYPE_11__** %10, align 8
  %112 = call i32 @clGetSupportedImageFormats(i32 %107, i32 %108, i32 %109, i64 %110, %struct.TYPE_11__* %111, i64* null)
  store i32 %112, i32* %11, align 4
  %113 = load i32, i32* %11, align 4
  %114 = load i32, i32* @CL_SUCCESS, align 4
  %115 = icmp ne i32 %113, %114
  br i1 %115, label %116, label %123

116:                                              ; preds = %104
  %117 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %118 = load i32, i32* @AV_LOG_ERROR, align 4
  %119 = load i32, i32* %11, align 4
  %120 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %117, i32 %118, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.3, i64 0, i64 0), i32 %119)
  %121 = load i32, i32* @ENOSYS, align 4
  %122 = call i32 @AVERROR(i32 %121)
  store i32 %122, i32* %13, align 4
  br label %245

123:                                              ; preds = %104
  store i32 0, i32* %14, align 4
  store i32 0, i32* %12, align 4
  br label %124

124:                                              ; preds = %218, %123
  %125 = load i32, i32* %12, align 4
  %126 = load i32, i32* @AV_PIX_FMT_NB, align 4
  %127 = icmp ult i32 %125, %126
  br i1 %127, label %128, label %221

128:                                              ; preds = %124
  store i32 0, i32* %19, align 4
  br label %129

129:                                              ; preds = %176, %128
  %130 = load i32, i32* %12, align 4
  %131 = load i32, i32* %19, align 4
  %132 = call i32 @opencl_get_plane_format(i32 %130, i32 %131, i32 0, i32 0, %struct.TYPE_11__* %17, i32* %18)
  store i32 %132, i32* %13, align 4
  %133 = load i32, i32* %13, align 4
  %134 = icmp slt i32 %133, 0
  br i1 %134, label %135, label %136

135:                                              ; preds = %129
  br label %179

136:                                              ; preds = %129
  store i32 0, i32* %20, align 4
  br label %137

137:                                              ; preds = %164, %136
  %138 = load i32, i32* %20, align 4
  %139 = sext i32 %138 to i64
  %140 = load i64, i64* %9, align 8
  %141 = icmp slt i64 %139, %140
  br i1 %141, label %142, label %167

142:                                              ; preds = %137
  %143 = load %struct.TYPE_11__*, %struct.TYPE_11__** %10, align 8
  %144 = load i32, i32* %20, align 4
  %145 = sext i32 %144 to i64
  %146 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %143, i64 %145
  %147 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %146, i32 0, i32 0
  %148 = load i64, i64* %147, align 8
  %149 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %17, i32 0, i32 0
  %150 = load i64, i64* %149, align 8
  %151 = icmp eq i64 %148, %150
  br i1 %151, label %152, label %163

152:                                              ; preds = %142
  %153 = load %struct.TYPE_11__*, %struct.TYPE_11__** %10, align 8
  %154 = load i32, i32* %20, align 4
  %155 = sext i32 %154 to i64
  %156 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %153, i64 %155
  %157 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %156, i32 0, i32 1
  %158 = load i64, i64* %157, align 8
  %159 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %17, i32 0, i32 1
  %160 = load i64, i64* %159, align 8
  %161 = icmp eq i64 %158, %160
  br i1 %161, label %162, label %163

162:                                              ; preds = %152
  br label %167

163:                                              ; preds = %152, %142
  br label %164

164:                                              ; preds = %163
  %165 = load i32, i32* %20, align 4
  %166 = add nsw i32 %165, 1
  store i32 %166, i32* %20, align 4
  br label %137

167:                                              ; preds = %162, %137
  %168 = load i32, i32* %20, align 4
  %169 = sext i32 %168 to i64
  %170 = load i64, i64* %9, align 8
  %171 = icmp eq i64 %169, %170
  br i1 %171, label %172, label %175

172:                                              ; preds = %167
  %173 = load i32, i32* @EINVAL, align 4
  %174 = call i32 @AVERROR(i32 %173)
  store i32 %174, i32* %13, align 4
  br label %179

175:                                              ; preds = %167
  br label %176

176:                                              ; preds = %175
  %177 = load i32, i32* %19, align 4
  %178 = add nsw i32 %177, 1
  store i32 %178, i32* %19, align 4
  br label %129

179:                                              ; preds = %172, %135
  %180 = load i32, i32* %13, align 4
  %181 = load i32, i32* @ENOENT, align 4
  %182 = call i32 @AVERROR(i32 %181)
  %183 = icmp ne i32 %180, %182
  br i1 %183, label %184, label %185

184:                                              ; preds = %179
  br label %218

185:                                              ; preds = %179
  %186 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %187 = load i32, i32* @AV_LOG_DEBUG, align 4
  %188 = load i32, i32* %12, align 4
  %189 = call i32 @av_get_pix_fmt_name(i32 %188)
  %190 = call i32 (%struct.TYPE_14__*, i32, i8*, ...) @av_log(%struct.TYPE_14__* %186, i32 %187, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0), i32 %189)
  %191 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %192 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %191, i32 0, i32 2
  %193 = load i32, i32* %14, align 4
  %194 = add nsw i32 %193, 2
  %195 = call i32 @av_reallocp_array(i32** %192, i32 %194, i32 4)
  store i32 %195, i32* %13, align 4
  %196 = load i32, i32* %13, align 4
  %197 = icmp slt i32 %196, 0
  br i1 %197, label %198, label %199

198:                                              ; preds = %185
  br label %245

199:                                              ; preds = %185
  %200 = load i32, i32* %12, align 4
  %201 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %202 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %201, i32 0, i32 2
  %203 = load i32*, i32** %202, align 8
  %204 = load i32, i32* %14, align 4
  %205 = sext i32 %204 to i64
  %206 = getelementptr inbounds i32, i32* %203, i64 %205
  store i32 %200, i32* %206, align 4
  %207 = load i8*, i8** @AV_PIX_FMT_NONE, align 8
  %208 = ptrtoint i8* %207 to i32
  %209 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %210 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %209, i32 0, i32 2
  %211 = load i32*, i32** %210, align 8
  %212 = load i32, i32* %14, align 4
  %213 = add nsw i32 %212, 1
  %214 = sext i32 %213 to i64
  %215 = getelementptr inbounds i32, i32* %211, i64 %214
  store i32 %208, i32* %215, align 4
  %216 = load i32, i32* %14, align 4
  %217 = add nsw i32 %216, 1
  store i32 %217, i32* %14, align 4
  br label %218

218:                                              ; preds = %199, %184
  %219 = load i32, i32* %12, align 4
  %220 = add i32 %219, 1
  store i32 %220, i32* %12, align 4
  br label %124

221:                                              ; preds = %124
  %222 = call i32 @av_freep(%struct.TYPE_11__** %10)
  %223 = call i8* @av_malloc_array(i32 2, i32 8)
  %224 = bitcast i8* %223 to i8**
  %225 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %226 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %225, i32 0, i32 3
  store i8** %224, i8*** %226, align 8
  %227 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %228 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %227, i32 0, i32 3
  %229 = load i8**, i8*** %228, align 8
  %230 = icmp ne i8** %229, null
  br i1 %230, label %234, label %231

231:                                              ; preds = %221
  %232 = load i32, i32* @ENOMEM, align 4
  %233 = call i32 @AVERROR(i32 %232)
  store i32 %233, i32* %13, align 4
  br label %245

234:                                              ; preds = %221
  %235 = load i8*, i8** @AV_PIX_FMT_OPENCL, align 8
  %236 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %237 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %236, i32 0, i32 3
  %238 = load i8**, i8*** %237, align 8
  %239 = getelementptr inbounds i8*, i8** %238, i64 0
  store i8* %235, i8** %239, align 8
  %240 = load i8*, i8** @AV_PIX_FMT_NONE, align 8
  %241 = load %struct.TYPE_13__*, %struct.TYPE_13__** %7, align 8
  %242 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %241, i32 0, i32 3
  %243 = load i8**, i8*** %242, align 8
  %244 = getelementptr inbounds i8*, i8** %243, i64 1
  store i8* %240, i8** %244, align 8
  store i32 0, i32* %4, align 4
  br label %248

245:                                              ; preds = %231, %198, %116, %101, %88, %78
  %246 = call i32 @av_freep(%struct.TYPE_11__** %10)
  %247 = load i32, i32* %13, align 4
  store i32 %247, i32* %4, align 4
  br label %248

248:                                              ; preds = %245, %234
  %249 = load i32, i32* %4, align 4
  ret i32 %249
}

declare dso_local i32 @clGetDeviceInfo(i32, i32, i32, i64*, i32*) #1

declare dso_local i32 @av_log(%struct.TYPE_14__*, i32, i8*, ...) #1

declare dso_local i32 @clGetSupportedImageFormats(i32, i32, i32, i64, %struct.TYPE_11__*, i64*) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i8* @av_malloc_array(i32, i32) #1

declare dso_local i32 @opencl_get_plane_format(i32, i32, i32, i32, %struct.TYPE_11__*, i32*) #1

declare dso_local i32 @av_get_pix_fmt_name(i32) #1

declare dso_local i32 @av_reallocp_array(i32**, i32, i32) #1

declare dso_local i32 @av_freep(%struct.TYPE_11__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
